deployment-react.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node
  labels:
    app: node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: webigeo/my-react:test
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
