nginx-deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-1
  namespace: webigeo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-container
          image: nginx:latest
          ports:
            - containerPort: 80
