statefulset-sqlite.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: webigeo/my-django
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
