nginx-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-1
  namespace: webigeo
spec:
  selector:
    app: nginx
    deployment: nginx-deployment-1
  ports:
    - protocol: TCP
      port: 8081       # Port on the NodePort service
      targetPort: 80   # Port inside the pods
  type: NodePort       # Service type is NodePort
