nginx-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-2
  namespace: webigeo
spec:
  selector:
    app: nginx
    deployment: nginx-deployment-2
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 80
  type: NodePort
