nginx-service-3.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-3
  namespace: webigeo
spec:
  selector:
    app: nginx
    deployment: nginx-deployment-3
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 80
  type: NodePort
