service-react.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
