service-sqlite.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
