app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: webigeo.dcpepper.cloudns.ph
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: node-service
              port:
                number: 3000
