app-prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: app-secret
      hosts:
        - webigeo.dcpepper.cloudns.ph
  rules:
  - host: webigeo.dcpepper.cloudns.ph
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: node-service
              port:
                number: 3000
  
  - host: api.webigeo.dcpepper.cloudns.ph
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: django-service
              port:
                number: 8000
